[project]
name = "blog-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "openai>=2.8.1",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]
